<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:contentDescription="@string/app_banner"
        android:id="@+id/banner"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/devslopesbanner" />

    <ImageView
        android:contentDescription="@string/app_logo"
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/devslopesprofilelogo" />

    <TextView
        android:id="@+id/profileTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_profile_text"
        android:fontFamily="@font/amiko_semibold"
        android:text="@string/app_profile_name"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/banner" />

    <ImageView
        android:contentDescription="@string/app_camera"
        android:id="@+id/cameraImg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/starImg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:srcCompat="@drawable/camerabutton" />

    <ImageView
        android:contentDescription="@string/app_star"
        android:id="@+id/starImg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/cameraImg"
        app:layout_constraintEnd_toStartOf="@+id/inboxImg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cameraImg"
        app:layout_constraintTop_toTopOf="@+id/cameraImg"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/favoritebutton" />

    <ImageView
        android:contentDescription="@string/app_inbox"
        android:id="@+id/inboxImg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/starImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/starImg"
        app:layout_constraintTop_toTopOf="@+id/starImg"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/inboxbutton" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/dataImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_data_image"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/cameraImg"
        app:srcCompat="@drawable/dataimage" />

    <ImageView
        android:id="@+id/photoImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/app_photo_image"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/dataImg"
        app:srcCompat="@drawable/imagesimage" />

    <ImageView
        android:id="@+id/videoImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_video_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/dataImg"
        app:layout_constraintTop_toBottomOf="@+id/dataImg"
        app:srcCompat="@drawable/videosimage" />

    <ImageView
        android:id="@+id/codeImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_code_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/photoImg"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/photoImg"
        app:srcCompat="@drawable/codeimage" />

</android.support.constraint.ConstraintLayout>